tests/ui/associated-types/issue-47814.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-47814.rs:8:32
   |
LL |     pub fn to_buffer() -> [u8; Self::LENGTH] {
   |                                ^^^^
   |
note: not a concrete type
  --> $DIR/issue-47814.rs:5:10
   |
LL | impl<'a> ArpIPv4<'a> {
   |          ^^^^^^^^^^^

error: aborting due to 1 previous error

